--- a/css/styles.css
+++ b/css/styles.css
@@ -675,6 +675,11 @@ button {
   display: block;
   margin-left: auto;
   margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
 }
 
 .modal-svg {
